--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,6 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <p class="message">Hi Friends</p>
+        <p class="message">Hello World</p>
     </body>    
 </html>
